--- a/NeverForget/app/src/main/res/navigation/mobile_navigation.xml
+++ b/NeverForget/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,25 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.example.neverforget.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home">
-
-        <action
-            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
-            app:destination="@id/nav_home_second" />
-    </fragment>
-    <fragment
-        android:id="@+id/nav_home_second"
-        android:name="com.example.neverforget.ui.home.HomeSecondFragment"
-        android:label="@string/home_second"
-        tools:layout="@layout/fragment_home_second">
-        <action
-            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
-            app:destination="@id/nav_home" />
-
-        <argument
-            android:name="myArg"
-            app:argType="string" />
-    </fragment>
+        tools:layout="@layout/fragment_home"/>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -40,4 +22,10 @@
         android:name="com.example.neverforget.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_mysize"
+        android:name="com.example.neverforget.ui.mysize.MysizeFragment"
+        android:label="@string/menu_mysize"
+        tools:layout="@layout/fragment_mysize" />
 </navigation>
