--- a/NeverForget/app/src/main/res/menu/activity_main_drawer.xml
+++ b/NeverForget/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,11 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+
+        <item
+            android:id="@+id/nav_mysize"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_mysize" />
+
     </group>
 </menu>
